--- a/experiments/exp_bank_loan.ipynb
+++ b/experiments/exp_bank_loan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -220,28 +220,19 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'bankloan_' + str(nb_vals), compute=True, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'bankloan_' + str(nb_vals), compute=False, output_path='../saves')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2335 2481  args total\n",
-      "bankloan_100\n",
-      "len(R_atk) =  4822396\n",
-      "5 highest degrees: [(frozenset({35}), 2403) (frozenset({30}), 2403)\n",
-      " (frozenset({32, 61}), 2417) (frozenset({51, 36}), 2428)\n",
-      " (frozenset({63}), 2469)]\n",
-      "5 lowest degrees: [(frozenset({3, 28, 55}), 1532) (frozenset({3, 13, 38}), 1535)\n",
-      " (frozenset({2, 10, 52}), 1541) (frozenset({2, 10, 54}), 1545)\n",
-      " (frozenset({1, 10, 41}), 1551)]\n",
-      "edges per node: 2002.656146179402\n"
+      "2335 2481  args total\n"
      ]
     }
    ],
@@ -255,17 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pre-processing file...\n",
-      "Done\n",
+      "Using pre-processed file...\n",
       "Reading ../saves/bankloan_100_sat_preprocessed.txt\n",
-      "Time for selection:  257.57285618782043\n",
+      "Time for selection:  227.11365580558777\n",
       "Len max_cov_exts:  8\n"
      ]
     }
@@ -278,14 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{frozenset({37, 4, 45}), frozenset({2, 18, 21}), frozenset({1, 9, 22}), frozenset({30, 15}), frozenset({24, 9, 4, 39}), frozenset({26, 13}), frozenset({24, 20, 4, 37}), frozenset({24, 41, 46, 39}), frozenset({29, 35, 45}), frozenset({43, 20, 36}), frozenset({9, 44, 37}), frozenset({32, 40, 36, 5}), frozenset({43, 15}), frozenset({2, 11, 36}), frozenset({11, 22, 39}), frozenset({33, 13, 22}), frozenset({13, 45}), frozenset({0, 13}), frozenset({41, 34, 11}), frozenset({0, 20, 46, 39}), frozenset({28, 45, 31}), frozenset({2, 43, 29}), frozenset({4, 22, 39}), frozenset({2, 44, 21}), frozenset({32, 33, 22}), frozenset({28, 30, 44}), frozenset({3, 11}), frozenset({0, 41, 20, 46}), frozenset({34, 3, 44}), frozenset({33, 10}), frozenset({33, 44, 38}), frozenset({18, 20}), frozenset({5, 36, 37, 30}), frozenset({11, 43, 20}), frozenset({0, 10}), frozenset({1, 29, 46}), frozenset({40, 44, 30}), frozenset({13, 46}), frozenset({1, 31, 33}), frozenset({33, 45, 30}), frozenset({43, 4, 30}), frozenset({4, 45, 31}), frozenset({10, 5}), frozenset({24, 29, 38}), frozenset({16, 1}), frozenset({32, 9, 44}), frozenset({32, 41, 20, 36}), frozenset({21, 29, 46}), frozenset({24, 36, 37, 30}), frozenset({11, 20, 29}), frozenset({2, 10}), frozenset({32, 34, 5}), frozenset({16, 33}), frozenset({18, 29}), frozenset({33, 4, 21}), frozenset({24, 20, 4, 29}), frozenset({24, 35, 20, 29}), frozenset({0, 5, 37, 46}), frozenset({34, 21}), frozenset({4, 45, 36}), frozenset({4, 29, 44, 39}), frozenset({3, 28, 44}), frozenset({18, 44}), frozenset({33, 21, 46}), frozenset({1, 11, 36, 5}), frozenset({24, 36, 5, 44}), frozenset({32, 4, 36}), frozenset({24, 45, 38}), frozenset({33, 28}), frozenset({2, 11, 37}), frozenset({1, 28, 29}), frozenset({0, 4, 44}), frozenset({41, 28, 45}), frozenset({2, 44, 29}), frozenset({0, 42, 45}), frozenset({35, 28}), frozenset({34, 4, 31}), frozenset({34, 44, 31}), frozenset({33, 31, 39}), frozenset({0, 34, 46}), frozenset({32, 33, 46}), frozenset({44, 13}), frozenset({0, 41, 40}), frozenset({35, 46, 30}), frozenset({16, 22}), frozenset({5, 23}), frozenset({24, 1, 5, 31}), frozenset({24, 11, 36}), frozenset({1, 43, 28}), frozenset({11, 38}), frozenset({24, 36, 22, 39}), frozenset({35, 44, 29}), frozenset({40, 34, 5}), frozenset({11, 44, 5}), frozenset({2, 36, 29}), frozenset({1, 42}), frozenset({9, 34, 43}), frozenset({9, 35, 31}), frozenset({2, 21, 46}), frozenset({37, 5, 43, 29}), frozenset({24, 36, 46, 30}), frozenset({2, 20, 36, 39}), frozenset({15, 31}), frozenset({2, 28, 46}), frozenset({10, 36}), frozenset({36, 38, 44}), frozenset({0, 9, 34}), frozenset({1, 20, 13}), frozenset({41, 29, 36, 45}), frozenset({15, 22, 39}), frozenset({31, 46, 22}), frozenset({0, 9, 24, 41}), frozenset({32, 2}), frozenset({24, 31, 22, 39}), frozenset({0, 9, 4, 39}), frozenset({24, 36, 22, 31}), frozenset({33, 4, 39}), frozenset({0, 42, 22}), frozenset({2, 37, 45}), frozenset({0, 45, 38}), frozenset({4, 15}), frozenset({2, 11, 29}), frozenset({35, 12}), frozenset({10, 42}), frozenset({0, 41, 20, 5}), frozenset({40, 11}), frozenset({42, 31}), frozenset({40, 33, 46}), frozenset({41, 3, 38}), frozenset({34, 29, 37, 22}), frozenset({28, 44, 39}), frozenset({34, 45}), frozenset({2, 43, 22}), frozenset({0, 9, 5, 37}), frozenset({5, 11, 21}), frozenset({32, 41, 40, 5}), frozenset({32, 36, 38}), frozenset({24, 42, 45}), frozenset({9, 34, 22}), frozenset({42, 46, 22}), frozenset({5, 37, 29, 22}), frozenset({32, 9, 22}), frozenset({36, 5, 46, 30}), frozenset({20, 4, 29, 36}), frozenset({1, 35, 30}), frozenset({32, 20, 44}), frozenset({0, 45, 30}), frozenset({9, 35, 4, 39}), frozenset({33, 20, 29}), frozenset({1, 44, 22}), frozenset({2, 21, 29}), frozenset({2, 13}), frozenset({13, 21}), frozenset({17, 41}), frozenset({17, 31}), frozenset({0, 9, 24, 30}), frozenset({2, 46, 39}), frozenset({24, 2, 36, 37}), frozenset({11, 20, 39}), frozenset({21, 11, 45}), frozenset({12, 29}), frozenset({0, 40, 4}), frozenset({24, 42, 22}), frozenset({0, 33, 44, 22}), frozenset({0, 9, 31}), frozenset({17, 39}), frozenset({11, 44, 22}), frozenset({12, 37}), frozenset({0, 44, 29}), frozenset({0, 9, 20, 41}), frozenset({26, 30}), frozenset({1, 43, 31}), frozenset({29, 44, 37, 22}), frozenset({1, 18}), frozenset({1, 17}), frozenset({26, 20, 5}), frozenset({44, 5, 30}), frozenset({0, 33, 22, 39}), frozenset({1, 37, 31}), frozenset({32, 9, 34}), frozenset({0, 11, 20}), frozenset({0, 9, 33}), frozenset({11, 37, 22}), frozenset({0, 34, 31}), frozenset({4, 12, 30}), frozenset({34, 4, 39}), frozenset({34, 44, 39}), frozenset({33, 4, 44}), frozenset({40, 9, 22}), frozenset({1, 5, 29, 33}), frozenset({34, 44, 30}), frozenset({35, 20, 5, 39}), frozenset({28, 4, 29}), frozenset({1, 28, 22}), frozenset({0, 31, 39}), frozenset({0, 9, 32, 41}), frozenset({10, 38}), frozenset({24, 11, 4}), frozenset({24, 11, 44}), frozenset({0, 5, 35, 29}), frozenset({4, 30, 39}), frozenset({24, 4, 30, 36}), frozenset({2, 35, 22}), frozenset({17, 33}), frozenset({37, 45, 31}), frozenset({34, 44, 15}), frozenset({9, 34, 39}), frozenset({16, 29}), frozenset({41, 36, 38}), frozenset({11, 4, 20}), frozenset({0, 9, 35}), frozenset({0, 9, 44}), frozenset({35, 13, 22}), frozenset({2, 29, 39}), frozenset({21, 29, 39}), frozenset({9, 38}), frozenset({0, 44, 22, 39}), frozenset({5, 36, 37, 22}), frozenset({0, 45, 22}), frozenset({0, 20, 30}), frozenset({42, 44}), frozenset({34, 37, 31}), frozenset({16, 4}), frozenset({33, 20, 46}), frozenset({2, 46, 30}), frozenset({33, 20, 13}), frozenset({32, 44, 38}), frozenset({9, 34, 5, 30}), frozenset({16, 42}), frozenset({1, 20, 4, 29}), frozenset({40, 33, 20}), frozenset({9, 34, 44}), frozenset({13, 31}), frozenset({5, 28, 21}), frozenset({1, 46, 33}), frozenset({3, 28, 39}), frozenset({43, 38}), frozenset({42, 11}), frozenset({44, 29, 38}), frozenset({0, 4, 20, 36}), frozenset({43, 36, 37, 30}), frozenset({24, 35, 13}), frozenset({33, 44, 30}), frozenset({0, 44, 30}), frozenset({9, 35, 20, 39}), frozenset({0, 24, 45}), frozenset({11, 36, 30}), frozenset({40, 34, 44}), frozenset({11, 28}), frozenset({33, 29, 46}), frozenset({0, 41, 32, 20}), frozenset({1, 34, 28}), frozenset({9, 46, 22}), frozenset({33, 43, 4}), frozenset({28, 45, 39}), frozenset({34, 43, 20, 37}), frozenset({40, 9, 34}), frozenset({42, 20, 45}), frozenset({33, 20, 44}), frozenset({24, 45, 22, 31}), frozenset({2, 44, 39}), frozenset({43, 28, 29}), frozenset({28, 21, 44}), frozenset({0, 20, 44}), frozenset({0, 24, 35, 20}), frozenset({0, 9, 5, 30}), frozenset({1, 34, 5, 9}), frozenset({35, 29, 46}), frozenset({40, 4, 36}), frozenset({32, 3, 44}), frozenset({24, 2, 11}), frozenset({2, 28, 29}), frozenset({43, 4, 28}), frozenset({3, 31, 39}), frozenset({0, 20, 37}), frozenset({24, 36, 5, 31}), frozenset({40, 4, 44}), frozenset({3, 20, 44}), frozenset({16, 43}), frozenset({9, 2, 35}), frozenset({33, 4, 46})}\n"
+     "ename": "TypeError",
+     "evalue": "argument of type 'NoneType' is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments\\exp_bank_loan.ipynb Cellule 10\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m res \u001b[39m=\u001b[39m explainer\u001b[39m.\u001b[39mapply_inference(max_covi_ext, \u001b[39m'\u001b[39m\u001b[39muniversal\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m#print(res)\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m explainer\u001b[39m.\u001b[39;49mdisplay_explanations()\n",
+      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:542\u001b[0m, in \u001b[0;36mArgTabularExplainer.display_explanations\u001b[1;34m(self, slice)\u001b[0m\n\u001b[0;32m    540\u001b[0m tot \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m    541\u001b[0m \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mslice\u001b[39m:\n\u001b[1;32m--> 542\u001b[0m     expl, cov \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexplain(k)\n\u001b[0;32m    543\u001b[0m     expl_parsed \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparse_features(expl)\n\u001b[0;32m    544\u001b[0m     example \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(\u001b[39miter\u001b[39m(expl_parsed)) \u001b[39mif\u001b[39;00m expl_parsed \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:517\u001b[0m, in \u001b[0;36mArgTabularExplainer.explain\u001b[1;34m(self, i)\u001b[0m\n\u001b[0;32m    514\u001b[0m expl \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m()\n\u001b[0;32m    516\u001b[0m instance_set \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(np\u001b[39m.\u001b[39mwhere(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX[i]\u001b[39m.\u001b[39mtoarray() \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m)[\u001b[39m1\u001b[39m])\n\u001b[1;32m--> 517\u001b[0m \u001b[39mif\u001b[39;00m i \u001b[39min\u001b[39;49;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstrategy[\u001b[39m'\u001b[39;49m\u001b[39mcovi\u001b[39;49m\u001b[39m'\u001b[39;49m]:\n\u001b[0;32m    518\u001b[0m     \u001b[39mfor\u001b[39;00m arg \u001b[39min\u001b[39;00m expl_set:\n\u001b[0;32m    519\u001b[0m         \u001b[39mif\u001b[39;00m arg\u001b[39m.\u001b[39missubset(instance_set):\n",
+      "\u001b[1;31mTypeError\u001b[0m: argument of type 'NoneType' is not iterable"
      ]
     }
    ],
