Implements minimality check with binary tree

--- a/experiments/exp_lending.ipynb
+++ b/experiments/exp_lending.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,6 +114,12 @@
       "len  5 : 7 ,  0\n",
       "8400  potential arg checked.\n",
       "len  6 : 0 ,  0\n",
+      "3600  potential arg checked.\n",
+      "len  7 : 0 ,  0\n",
+      "900  potential arg checked.\n",
+      "len  8 : 0 ,  0\n",
+      "100  potential arg checked.\n",
+      "len  9 : 0 ,  0\n",
       "Saving to  ../saves\\lending_100_minimals.df\n"
      ]
     }
@@ -128,7 +134,7 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'lending_' + str(nb_vals), compute=False, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'lending_' + str(nb_vals), compute=True, output_path='../saves')"
    ]
   },
   {
