--- a/experiments/exp_rcdv.ipynb
+++ b/experiments/exp_rcdv.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,24 +102,36 @@
      "text": [
       "['Race', 'Alcohol', 'Junky', 'Supervised Release', 'Married', 'Felony', 'WorkRelease', 'Crime against Property', 'Crime against Person', 'Gender', 'Priors', 'YearsSchool', 'PrisonViolations', 'Age', 'MonthsServed']\n",
       "Generating arguments\n",
-      "1500  potential arg checked.\n",
+      "1500 potential arg checked ( 0 not minimal) 0 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
       "len  1 : 0 ,  0\n",
-      "10500  potential arg checked.\n",
+      "10500 potential arg checked ( 0 not minimal) 83 minimal arguments added 177 arguments added 30 arguments of cl0 53 arguments of cl1\n",
       "len  2 : 30 ,  53\n",
-      "45500  potential arg checked.\n",
+      "45500 potential arg checked ( 2053 not minimal) 726 minimal arguments added 1285 arguments added 369 arguments of cl0 274 arguments of cl1\n",
       "len  3 : 369 ,  274\n",
-      "136500  potential arg checked.\n",
+      "136500 potential arg checked ( 22233 not minimal) 2116 minimal arguments added 2914 arguments added 735 arguments of cl0 655 arguments of cl1\n",
       "len  4 : 735 ,  655\n",
-      "300300  potential arg checked.\n",
+      "300300 potential arg checked ( 100016 not minimal) 2820 minimal arguments added 1403 arguments added 308 arguments of cl0 396 arguments of cl1\n",
       "len  5 : 308 ,  396\n",
-      "500500  potential arg checked.\n",
+      "500500 potential arg checked ( 252330 not minimal) 2952 minimal arguments added 311 arguments added 36 arguments of cl0 96 arguments of cl1\n",
       "len  6 : 36 ,  96\n",
-      "643500  potential arg checked.\n",
+      "643500 potential arg checked ( 422662 not minimal) 2965 minimal arguments added 33 arguments added 8 arguments of cl0 5 arguments of cl1\n",
       "len  7 : 8 ,  5\n",
-      "643500  potential arg checked.\n",
+      "643500 potential arg checked ( 500362 not minimal) 2966 minimal arguments added 3 arguments added 0 arguments of cl0 1 arguments of cl1\n",
       "len  8 : 0 ,  1\n",
-      "500500  potential arg checked.\n",
+      "500500 potential arg checked ( 432357 not minimal) 2966 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
       "len  9 : 0 ,  0\n",
+      "300300 potential arg checked ( 276561 not minimal) 2966 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
+      "len  10 : 0 ,  0\n",
+      "136500 potential arg checked ( 130581 not minimal) 2966 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
+      "len  11 : 0 ,  0\n",
+      "45500 potential arg checked ( 44496 not minimal) 2966 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
+      "len  12 : 0 ,  0\n",
+      "10500 potential arg checked ( 10396 not minimal) 2966 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
+      "len  13 : 0 ,  0\n",
+      "1500 potential arg checked ( 1495 not minimal) 2966 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
+      "len  14 : 0 ,  0\n",
+      "100 potential arg checked ( 100 not minimal) 2966 minimal arguments added 0 arguments added 0 arguments of cl0 0 arguments of cl1\n",
+      "len  15 : 0 ,  0\n",
       "Saving to  ../saves\\recidivism_100_minimals.df\n"
      ]
     }
@@ -130,7 +142,9 @@
     "\n",
     "import arg_explainer as ae\n",
     "from importlib import reload\n",
+    "import MinimaliT\n",
     "reload(ae)\n",
+    "reload(MinimaliT)\n",
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
@@ -139,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
