--- a/experiments/exp_diabetes.ipynb
+++ b/experiments/exp_diabetes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,34 +17,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 3. 0. 0. 3. 0. 0. 1.]\n"
+      "[13.  2.  0.  1.  3.  0.  3.  2.]\n"
      ]
     }
    ],
    "source": [
-    "dataset_folder = '../../datasets/'\n",
-    "dataset = utils.load_dataset('diabetes', balance=True, dataset_folder=dataset_folder, discretize=True)\n",
-    "print(dataset.train[0])"
+    "dataset_folder = '../../datasets/diabetes/'\n",
+    "target_idx = 8\n",
+    "balance = True\n",
+    "features_to_use = [0, 1, 2, 3, 4, 5, 6, 7]\n",
+    "feature_names = ['Pregnancies', 'Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age', 'Outcome']\n",
+    "dataset = utils.load_csv_dataset(\n",
+    "            os.path.join(dataset_folder, 'diabetes.csv'), target_idx, ',',\n",
+    "            feature_names=feature_names, features_to_use=features_to_use, \n",
+    "            discretize=True, balance=balance, skip_first=True)\n",
+    "            \n",
+    "print(dataset.train[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train 0.9124586549062844\n",
-      "Test 0.828042328042328\n"
+      "Train 1.0\n",
+      "Test 0.7777777777777778\n"
      ]
     }
    ],
@@ -58,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['5400.00 < loan_amnt <= 10000.00', 'MORTGAGE', 'annual_inc > 82000.00', 'desc <= 4.00', 'inq_last_6mths <= 0.00', 'revol_util > 72.22', 'last_fico_range_high <= 649.00', 'last_fico_range_low <= 645.00', '0']\n",
-      "(9070, 9)\n",
-      "[1. 0. 3. 0. 0. 3. 0. 0. 1.]\n",
-      "[[1. 0. 3. 0. 0. 3. 0. 0. 1.]]\n"
+      "['1', '99.00 < Glucose <= 117.00', 'BloodPressure <= 62.00', '0.00 < SkinThickness <= 23.00', '30.50 < Insulin <= 127.25', 'BMI <= 27.30', '0.37 < DiabetesPedigreeFunction <= 0.63', '24.00 < Age <= 29.00']\n",
+      "(428, 8)\n",
+      "[1. 1. 0. 1. 2. 0. 2. 1.]\n",
+      "[[1. 1. 0. 1. 2. 0. 2. 1.]]\n"
      ]
     }
    ],
@@ -93,28 +101,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['loan_amnt', 'home_ownership', 'annual_inc', 'desc', 'inq_last_6mths', 'revol_util', 'last_fico_range_high', 'last_fico_range_low', 'pub_rec_bankruptcies']\n",
+      "['Pregnancies', 'Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age']\n",
       "Generating arguments\n",
-      "900  potential arg checked.\n",
-      "len  1 : 2 ,  1\n",
-      "3600  potential arg checked.\n",
-      "len  2 : 49 ,  61\n",
-      "8400  potential arg checked.\n",
-      "len  3 : 159 ,  197\n",
-      "12600  potential arg checked.\n",
-      "len  4 : 59 ,  18\n",
-      "12600  potential arg checked.\n",
-      "len  5 : 7 ,  0\n",
-      "8400  potential arg checked.\n",
+      "800  potential arg checked.\n",
+      "len  1 : 3 ,  4\n",
+      "2800  potential arg checked.\n",
+      "len  2 : 97 ,  56\n",
+      "5600  potential arg checked.\n",
+      "len  3 : 291 ,  414\n",
+      "7000  potential arg checked.\n",
+      "len  4 : 35 ,  29\n",
+      "5600  potential arg checked.\n",
+      "len  5 : 0 ,  0\n",
+      "2800  potential arg checked.\n",
       "len  6 : 0 ,  0\n",
-      "Saving to  ../saves\\lending_100_minimals.df\n"
+      "800  potential arg checked.\n",
+      "len  7 : 0 ,  0\n",
+      "100  potential arg checked.\n",
+      "len  8 : 0 ,  0\n",
+      "Saving to  ../saves\\diabetes_100_minimals.df\n"
      ]
     }
    ],
@@ -128,28 +140,28 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'lending_' + str(nb_vals), compute=True, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'diabetes_' + str(nb_vals), compute=True, output_path='../saves')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "276 277  args total\n",
-      "lending_100\n",
-      "len(R_atk) =  55972\n",
-      "5 highest degrees: [(frozenset({13, 22}), 262) (frozenset({26, 31, 15}), 267)\n",
-      " (frozenset({32, 25}), 267) (frozenset({32, 22}), 267)\n",
-      " (frozenset({30}), 269)]\n",
-      "5 lowest degrees: [(frozenset({1, 19, 12}), 124) (frozenset({1, 21, 14}), 127)\n",
-      " (frozenset({3, 21, 6, 14}), 128) (frozenset({2, 18, 13}), 131)\n",
-      " (frozenset({1, 18, 11}), 132)]\n",
-      "edges per node: 202.43037974683546\n"
+      "426 503  args total\n",
+      "diabetes_100\n",
+      "len(R_atk) =  160946\n",
+      "5 highest degrees: [(frozenset({33, 6}), 457) (frozenset({27, 14}), 461)\n",
+      " (frozenset({33, 22}), 463) (frozenset({28, 22}), 464)\n",
+      " (frozenset({26}), 473)]\n",
+      "5 lowest degrees: [(frozenset({1, 18, 17}), 217) (frozenset({1, 34, 17}), 230)\n",
+      " (frozenset({1, 21, 25}), 240) (frozenset({8, 19, 14}), 240)\n",
+      " (frozenset({10, 19, 15}), 243)]\n",
+      "edges per node: 346.49300322927877\n"
      ]
     }
    ],
@@ -162,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -170,16 +182,30 @@
      "output_type": "stream",
      "text": [
       "Working with NetworkX to find naive extensions:\n",
-      "Graph density =  0.4289357051787991\n",
-      "Number of extensions:  769\n",
-      "Time for selection:  0.05899333953857422\n",
-      "Len max_cov_exts:  2\n"
+      "Graph density =  0.3733760810660332\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments\\exp_diabetes.ipynb Cellule 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_diabetes.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ext_gen \u001b[39m=\u001b[39m explainer\u001b[39m.\u001b[39;49mextension_generator_from_graph()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_diabetes.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#ext_gen = explainer.extension_generator_from_sat(file='../saves/lending_100_sat.txt')\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_diabetes.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m max_covi_ext \u001b[39m=\u001b[39m explainer\u001b[39m.\u001b[39mmake_selection(\u001b[39m'\u001b[39m\u001b[39mmax_covi\u001b[39m\u001b[39m'\u001b[39m, ext_gen)\n",
+      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:314\u001b[0m, in \u001b[0;36mArgTabularExplainer.extension_generator_from_graph\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    312\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mWorking with NetworkX to find naive extensions:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    313\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mGraph density = \u001b[39m\u001b[39m\"\u001b[39m, nx\u001b[39m.\u001b[39mdensity(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mG))\n\u001b[1;32m--> 314\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mNumber of extensions: \u001b[39m\u001b[39m'\u001b[39m, nx\u001b[39m.\u001b[39;49mgraph_number_of_cliques(nx\u001b[39m.\u001b[39;49mcomplement(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mG)))\n\u001b[0;32m    315\u001b[0m \u001b[39mreturn\u001b[39;00m nx\u001b[39m.\u001b[39mfind_cliques(nx\u001b[39m.\u001b[39mcomplement(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mG))\n",
+      "File \u001b[1;32mc:\\Users\\henro\\anaconda3\\envs\\argenv\\lib\\site-packages\\networkx\\algorithms\\clique.py:511\u001b[0m, in \u001b[0;36mgraph_number_of_cliques\u001b[1;34m(G, cliques)\u001b[0m\n\u001b[0;32m    486\u001b[0m \u001b[39m\"\"\"Returns the number of maximal cliques in the graph.\u001b[39;00m\n\u001b[0;32m    487\u001b[0m \n\u001b[0;32m    488\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    508\u001b[0m \n\u001b[0;32m    509\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    510\u001b[0m \u001b[39mif\u001b[39;00m cliques \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 511\u001b[0m     cliques \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(find_cliques(G))\n\u001b[0;32m    512\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mlen\u001b[39m(cliques)\n",
+      "File \u001b[1;32mc:\\Users\\henro\\anaconda3\\envs\\argenv\\lib\\site-packages\\networkx\\utils\\decorators.py:811\u001b[0m, in \u001b[0;36margmap.__call__.<locals>.func\u001b[1;34m(_argmap__wrapper, *args, **kwargs)\u001b[0m\n\u001b[0;32m    810\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfunc\u001b[39m(\u001b[39m*\u001b[39margs, __wrapper\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m--> 811\u001b[0m     \u001b[39myield from\u001b[39;00m argmap\u001b[39m.\u001b[39m_lazy_compile(__wrapper)(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m<class 'networkx.utils.decorators.argmap'> compilation 4:4\u001b[0m, in \u001b[0;36margmap_find_cliques_1\u001b[1;34m(G, nodes)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mos\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpath\u001b[39;00m \u001b[39mimport\u001b[39;00m splitext\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcontextlib\u001b[39;00m \u001b[39mimport\u001b[39;00m contextmanager\n\u001b[1;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpathlib\u001b[39;00m \u001b[39mimport\u001b[39;00m Path\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnetworkx\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnx\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnetworkx\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m create_random_state, create_py_random_state\n",
+      "File \u001b[1;32mc:\\Users\\henro\\anaconda3\\envs\\argenv\\lib\\site-packages\\networkx\\algorithms\\clique.py:229\u001b[0m, in \u001b[0;36mfind_cliques\u001b[1;34m(G, nodes)\u001b[0m\n\u001b[0;32m    227\u001b[0m             subg \u001b[39m=\u001b[39m subg_q\n\u001b[0;32m    228\u001b[0m             cand \u001b[39m=\u001b[39m cand_q\n\u001b[1;32m--> 229\u001b[0m             u \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39;49m(subg, key\u001b[39m=\u001b[39;49m\u001b[39mlambda\u001b[39;49;00m u: \u001b[39mlen\u001b[39;49m(cand \u001b[39m&\u001b[39;49m adj[u]))\n\u001b[0;32m    230\u001b[0m             ext_u \u001b[39m=\u001b[39m cand \u001b[39m-\u001b[39m adj[u]\n\u001b[0;32m    231\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\henro\\anaconda3\\envs\\argenv\\lib\\site-packages\\networkx\\algorithms\\clique.py:229\u001b[0m, in \u001b[0;36mfind_cliques.<locals>.<lambda>\u001b[1;34m(u)\u001b[0m\n\u001b[0;32m    227\u001b[0m             subg \u001b[39m=\u001b[39m subg_q\n\u001b[0;32m    228\u001b[0m             cand \u001b[39m=\u001b[39m cand_q\n\u001b[1;32m--> 229\u001b[0m             u \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(subg, key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m u: \u001b[39mlen\u001b[39;49m(cand \u001b[39m&\u001b[39;49m adj[u]))\n\u001b[0;32m    230\u001b[0m             ext_u \u001b[39m=\u001b[39m cand \u001b[39m-\u001b[39m adj[u]\n\u001b[0;32m    231\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "#ext_gen = explainer.extension_generator_from_graph()\n",
-    "ext_gen = explainer.extension_generator_from_sat(file='../saves/lending_100_sat.txt')\n",
+    "ext_gen = explainer.extension_generator_from_graph()\n",
+    "#ext_gen = explainer.extension_generator_from_sat(file='../saves/diabetes_100_sat.txt')\n",
     "max_covi_ext = explainer.make_selection('max_covi', ext_gen)"
    ]
   },
