--- a/experiments/exp_titanic.ipynb
+++ b/experiments/exp_titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -129,31 +129,56 @@
      "text": [
       "['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare']\n",
       "Generating arguments\n",
-      "600 potential arg checked ( 0 not minimal) 1 minimal arguments added 1 arguments added 1 arguments of cl0 0 arguments of cl1\n",
-      "len  1 : 1 ,  0\n"
+      "600 potential arg checked ( 0 not minimal)\n",
+      "len  1 : 1 ,  0\n",
+      "1403 potential arg checked ( 0 not minimal)\n",
+      "len  2 : 6 ,  27\n",
+      "1403 potential arg checked ( 0 not minimal)\n",
+      "len  3 : 35 ,  34\n",
+      "567 potential arg checked ( 0 not minimal)\n",
+      "len  4 : 12 ,  3\n",
+      "94 potential arg checked ( 0 not minimal)\n",
+      "len  5 : 0 ,  0\n",
+      "0 potential arg checked ( 0 not minimal)\n",
+      "len  6 : 0 ,  0\n",
+      "Saving to  ../saves\\titanic_100_minimals.df\n",
+      " \n",
+      "*** Profile stats marshalled to file 'C:\\\\Users\\\\henro\\\\AppData\\\\Local\\\\Temp\\\\tmpflmpitca'.\n",
+      "Embedding SnakeViz in this document...\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'Table' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments\\exp_titanic.ipynb Cellule 6\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_titanic.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39marg_explainer\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mae\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_titanic.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(dataset\u001b[39m.\u001b[39mfeature_names)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_titanic.ipynb#W5sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m explainer \u001b[39m=\u001b[39m ae\u001b[39m.\u001b[39;49mArgTabularExplainer(c, train_data\u001b[39m.\u001b[39;49miloc[\u001b[39m0\u001b[39;49m:nb_vals], y, \u001b[39m'\u001b[39;49m\u001b[39mtitanic_\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39mstr\u001b[39;49m(nb_vals), compute\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, output_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m../saves\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:49\u001b[0m, in \u001b[0;36mArgTabularExplainer.__init__\u001b[1;34m(self, model, dataset, y, exp_name, compute, output_path)\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mibyf, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeatures_p_col, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcol_p_feature \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpreprocess_structures(\n\u001b[0;32m     46\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mt_X, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeature_names)\n\u001b[0;32m     48\u001b[0m \u001b[39mif\u001b[39;00m compute:\n\u001b[1;32m---> 49\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mminimals, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcovi_by_arg, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcovc_by_arg \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgenerate_args(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mibyf, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mX, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49my)\n\u001b[0;32m     50\u001b[0m     \u001b[39m## Save\u001b[39;00m\n\u001b[0;32m     51\u001b[0m     pp \u001b[39m=\u001b[39m path\u001b[39m.\u001b[39mjoin(output_path, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexp_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_minimals.df\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:163\u001b[0m, in \u001b[0;36mArgTabularExplainer.generate_args\u001b[1;34m(self, instances_by_feature, X, y)\u001b[0m\n\u001b[0;32m    161\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m minimals \u001b[39mor\u001b[39;00m \u001b[39mlen\u001b[39m(minimals[\u001b[39m0\u001b[39m]) \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m    162\u001b[0m     n \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m--> 163\u001b[0m     args, minimals \u001b[39m=\u001b[39m generate_args_lenN(n, instances_by_feature, X\u001b[39m.\u001b[39;49mtoarray(), y, minimals)\n\u001b[0;32m    164\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mlen \u001b[39m\u001b[39m\"\u001b[39m, n, \u001b[39m\"\u001b[39m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mlen\u001b[39m(minimals[\u001b[39m0\u001b[39m][n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]), \u001b[39m'\u001b[39m\u001b[39m, \u001b[39m\u001b[39m'\u001b[39m, \u001b[39mlen\u001b[39m(minimals[\u001b[39m1\u001b[39m][n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]))\n\u001b[0;32m    165\u001b[0m     \u001b[39m#if n==1 and ( not minimals[0][0] and not minimals[1][0]):\u001b[39;00m\n\u001b[0;32m    166\u001b[0m         \u001b[39m#special = True\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:136\u001b[0m, in \u001b[0;36mArgTabularExplainer.generate_args.<locals>.generate_args_lenN\u001b[1;34m(n, ibyf, X_enc, predictions, minimals)\u001b[0m\n\u001b[0;32m    133\u001b[0m \u001b[39mif\u001b[39;00m selection_preds[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m==\u001b[39m selection_preds[\u001b[39m1\u001b[39m:]:\n\u001b[0;32m    134\u001b[0m         \u001b[39m#print(selection, potential_arg)\u001b[39;00m\n\u001b[0;32m    135\u001b[0m         arg_count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m--> 136\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmt\u001b[39m.\u001b[39;49madd(potential_arg)\n\u001b[0;32m    137\u001b[0m         \u001b[39m#if frozenset(potential_arg) in args[selection_preds[0]]:\u001b[39;00m\n\u001b[0;32m    138\u001b[0m         \u001b[39m#    print(potential_arg, 'repeated')\u001b[39;00m\n\u001b[0;32m    139\u001b[0m         args[selection_preds[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39madd(\u001b[39mfrozenset\u001b[39m(potential_arg))\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:33\u001b[0m, in \u001b[0;36mree.add\u001b[1;34m(self, arg)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_minimal(arg):\n\u001b[0;32m     32\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnb_args \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> 33\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mencoded(arg), \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mroot)\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:52\u001b[0m, in \u001b[0;36mree._add\u001b[1;34m(self, arg, node)\u001b[0m\n\u001b[0;32m     50\u001b[0m             node\u001b[39m.\u001b[39ml \u001b[39m=\u001b[39m Node(\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     51\u001b[0m         \u001b[39m#print('l:', node.v, node.l.l, node.l.r)\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add(arg, node\u001b[39m.\u001b[39;49ml)\n\u001b[0;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     54\u001b[0m     \u001b[39m# Just popped the last 1\u001b[39;00m\n\u001b[0;32m     55\u001b[0m     node\u001b[39m.\u001b[39mv \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:47\u001b[0m, in \u001b[0;36mree._add\u001b[1;34m(self, arg, node)\u001b[0m\n\u001b[0;32m     45\u001b[0m         node\u001b[39m.\u001b[39mr \u001b[39m=\u001b[39m Node(\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     46\u001b[0m     \u001b[39m#print('r:', node.v, node.r.l, node.r.r)\u001b[39;00m\n\u001b[1;32m---> 47\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add(arg, node\u001b[39m.\u001b[39;49mr)\n\u001b[0;32m     48\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     49\u001b[0m     \u001b[39mif\u001b[39;00m node\u001b[39m.\u001b[39ml \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:52\u001b[0m, in \u001b[0;36mree._add\u001b[1;34m(self, arg, node)\u001b[0m\n\u001b[0;32m     50\u001b[0m             node\u001b[39m.\u001b[39ml \u001b[39m=\u001b[39m Node(\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     51\u001b[0m         \u001b[39m#print('l:', node.v, node.l.l, node.l.r)\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add(arg, node\u001b[39m.\u001b[39;49ml)\n\u001b[0;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     54\u001b[0m     \u001b[39m# Just popped the last 1\u001b[39;00m\n\u001b[0;32m     55\u001b[0m     node\u001b[39m.\u001b[39mv \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:52\u001b[0m, in \u001b[0;36mree._add\u001b[1;34m(self, arg, node)\u001b[0m\n\u001b[0;32m     50\u001b[0m             node\u001b[39m.\u001b[39ml \u001b[39m=\u001b[39m Node(\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     51\u001b[0m         \u001b[39m#print('l:', node.v, node.l.l, node.l.r)\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add(arg, node\u001b[39m.\u001b[39;49ml)\n\u001b[0;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     54\u001b[0m     \u001b[39m# Just popped the last 1\u001b[39;00m\n\u001b[0;32m     55\u001b[0m     node\u001b[39m.\u001b[39mv \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "    \u001b[1;31m[... skipping similar frames: ree._add at line 52 (10 times)]\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:52\u001b[0m, in \u001b[0;36mree._add\u001b[1;34m(self, arg, node)\u001b[0m\n\u001b[0;32m     50\u001b[0m             node\u001b[39m.\u001b[39ml \u001b[39m=\u001b[39m Node(\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     51\u001b[0m         \u001b[39m#print('l:', node.v, node.l.l, node.l.r)\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add(arg, node\u001b[39m.\u001b[39;49ml)\n\u001b[0;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     54\u001b[0m     \u001b[39m# Just popped the last 1\u001b[39;00m\n\u001b[0;32m     55\u001b[0m     node\u001b[39m.\u001b[39mv \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:47\u001b[0m, in \u001b[0;36mree._add\u001b[1;34m(self, arg, node)\u001b[0m\n\u001b[0;32m     45\u001b[0m         node\u001b[39m.\u001b[39mr \u001b[39m=\u001b[39m Node(\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     46\u001b[0m     \u001b[39m#print('r:', node.v, node.r.l, node.r.r)\u001b[39;00m\n\u001b[1;32m---> 47\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add(arg, node\u001b[39m.\u001b[39;49mr)\n\u001b[0;32m     48\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     49\u001b[0m     \u001b[39mif\u001b[39;00m node\u001b[39m.\u001b[39ml \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\MinimaliT.py:40\u001b[0m, in \u001b[0;36mree._add\u001b[1;34m(self, arg, node)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_add\u001b[39m(\u001b[39mself\u001b[39m, arg, node):\n\u001b[0;32m     39\u001b[0m     \u001b[39mif\u001b[39;00m node\u001b[39m.\u001b[39mv \u001b[39mis\u001b[39;00m \u001b[39mFalse\u001b[39;00m:\n\u001b[1;32m---> 40\u001b[0m         \u001b[39mraise\u001b[39;00m Error(\u001b[39m\"\u001b[39;49m\u001b[39mNot a minimal argument\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     41\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39msum\u001b[39m(arg):\n\u001b[0;32m     42\u001b[0m         \u001b[39m#print('adding new node', arg)\u001b[39;00m\n\u001b[0;32m     43\u001b[0m         \u001b[39mif\u001b[39;00m arg\u001b[39m.\u001b[39mpop():\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Table' object is not callable"
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe id='snakeviz-828458aa-56e9-11ed-b5e6-f4a4753d2be8' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>document.getElementById(\"snakeviz-828458aa-56e9-11ed-b5e6-f4a4753d2be8\").setAttribute(\"src\", \"http://\" + document.location.hostname + \":8080/snakeviz/C%3A%5CUsers%5Chenro%5CAppData%5CLocal%5CTemp%5Ctmpflmpitca\")</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating arguments\n",
+      "600 potential arg checked ( 0 not minimal)\n",
+      "len  1 : 1 ,  0\n",
+      "1403 potential arg checked ( 0 not minimal)\n",
+      "len  2 : 6 ,  27\n",
+      "1403 potential arg checked ( 0 not minimal)\n",
+      "len  3 : 35 ,  34\n",
+      "567 potential arg checked ( 0 not minimal)\n",
+      "len  4 : 12 ,  3\n",
+      "94 potential arg checked ( 0 not minimal)\n",
+      "len  5 : 0 ,  0\n",
+      "0 potential arg checked ( 0 not minimal)\n",
+      "len  6 : 0 ,  0\n",
+      "Saving to  ../saves\\titanic_100_minimals.df\n"
      ]
     }
    ],
@@ -169,6 +194,8 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
+    "%load_ext snakeviz\n",
+    "%snakeviz ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'titanic_' + str(nb_vals), compute=True, output_path='../saves')\n",
     "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'titanic_' + str(nb_vals), compute=True, output_path='../saves')"
    ]
   },
