Dropping encoding + optimisations + af analysis

--- a/experiments/exp_adult.ipynb
+++ b/experiments/exp_adult.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
     "\n",
     "train_data = pd.DataFrame(transformed_data, columns=dataset.feature_names)\n",
     "print(train_data.shape)\n",
-    "nb_vals = 100\n",
+    "nb_vals = 2000\n",
     "\n",
     "print(dataset.train[0])\n",
     "print(dataset.train[0].reshape(1, -1))\n",
@@ -93,14 +93,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Age', 'Workclass', 'Education', 'Marital Status', 'Occupation', 'Relationship', 'Race', 'Sex', 'Capital Gain', 'Capital Loss', 'Hours per week', 'Country']\n"
+      "['Age', 'Workclass', 'Education', 'Marital Status', 'Occupation', 'Relationship', 'Race', 'Sex', 'Capital Gain', 'Capital Loss', 'Hours per week', 'Country']\n",
+      "Generating arguments\n",
+      "len  1 : 13 ,  8\n",
+      "107 potential arg checked ( 0 not minimal)\n",
+      "len  2 : 479 ,  315\n",
+      "2263 potential arg checked ( 366 not minimal)\n",
+      "len  3 : 1435 ,  1319\n",
+      "12555 potential arg checked ( 11407 not minimal)\n",
+      "len  4 : 1344 ,  1658\n",
+      "36651 potential arg checked ( 74055 not minimal)\n",
+      "len  5 : 708 ,  605\n",
+      "69691 potential arg checked ( 231934 not minimal)\n",
+      "len  6 : 237 ,  148\n",
+      "88663 potential arg checked ( 437361 not minimal)\n",
+      "len  7 : 37 ,  22\n",
+      "74754 potential arg checked ( 538030 not minimal)\n",
+      "len  8 : 9 ,  1\n",
+      "41402 potential arg checked ( 443076 not minimal)\n",
+      "len  9 : 0 ,  0\n",
+      "14482 potential arg checked ( 243312 not minimal)\n",
+      "len  10 : 0 ,  0\n",
+      "2903 potential arg checked ( 85821 not minimal)\n",
+      "len  11 : 0 ,  0\n",
+      "255 potential arg checked ( 17642 not minimal)\n",
+      "len  12 : 0 ,  0\n",
+      "0 potential arg checked ( 1611 not minimal)\n",
+      "Saving to  ../saves\\adult_2000_minimals.df\n"
      ]
     }
    ],
@@ -114,27 +140,21 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adult_' + str(nb_vals), compute=False, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adult_' + str(nb_vals), compute=True, output_path='../saves')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "329 281  args total\n",
-      "adult_100\n",
-      "len(R_atk) =  72953\n",
-      "5 highest degrees: [(frozenset({67}), 321) (frozenset({53}), 327) (frozenset({54}), 327)\n",
-      " (frozenset({57}), 329) (frozenset({56}), 329)]\n",
-      "5 lowest degrees: [(frozenset({2, 36, 6}), 155) (frozenset({2, 28, 46}), 161)\n",
-      " (frozenset({2, 28, 50}), 161) (frozenset({2, 34}), 162)\n",
-      " (frozenset({1, 36, 6}), 163)]\n",
-      "edges per node: 239.19016393442624\n"
+      "4262 4076  args total\n",
+      "adult_2000\n",
+      "edges per node: 3073.1508755097148\n"
      ]
     }
    ],
@@ -144,6 +164,20 @@
     "\n",
     "explainer.export_graph('asp', '../saves')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
