--- a/experiments/exp_bank_loan.ipynb
+++ b/experiments/exp_bank_loan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
     "\n",
     "train_data = pd.DataFrame(transformed_data, columns=dataset.feature_names)\n",
     "print(train_data.shape)\n",
-    "nb_vals = 100\n",
+    "nb_vals = 1000\n",
     "\n",
     "print(dataset.train[0])\n",
     "print(dataset.train[0].reshape(1, -1))\n",
@@ -183,30 +183,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Current Loan Amount', 'Term', 'Credit Score', 'Annual Income', 'Years in current job', 'Home Ownership', 'Purpose', 'Monthly Debt', 'Years of Credit History', 'Number of Open Accounts', 'Number of Credit Problems', 'Current Credit Balance', 'Maximum Open Credit', 'Bankruptcies', 'Tax Liens']\n",
-      "Generating arguments\n",
-      "1500  potential arg checked.\n",
-      "len  1 : 4 ,  4\n",
-      "10500  potential arg checked.\n",
-      "len  2 : 171 ,  152\n",
-      "45500  potential arg checked.\n",
-      "len  3 : 1217 ,  1315\n",
-      "136500  potential arg checked.\n",
-      "len  4 : 885 ,  845\n",
-      "300300  potential arg checked.\n",
-      "len  5 : 56 ,  161\n",
-      "500500  potential arg checked.\n",
-      "len  6 : 2 ,  4\n",
-      "643500  potential arg checked.\n",
-      "len  7 : 0 ,  0\n",
-      "Saving to  ../saves\\bankloan_100_minimals.df\n"
+      "['Current Loan Amount', 'Term', 'Credit Score', 'Annual Income', 'Years in current job', 'Home Ownership', 'Purpose', 'Monthly Debt', 'Years of Credit History', 'Number of Open Accounts', 'Number of Credit Problems', 'Current Credit Balance', 'Maximum Open Credit', 'Bankruptcies', 'Tax Liens']\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments\\exp_bank_loan.ipynb Cellule 7\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39marg_explainer\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mae\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(dataset\u001b[39m.\u001b[39mfeature_names)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_bank_loan.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m explainer \u001b[39m=\u001b[39m ae\u001b[39m.\u001b[39;49mArgTabularExplainer(c, train_data\u001b[39m.\u001b[39;49miloc[\u001b[39m0\u001b[39;49m:nb_vals], y, \u001b[39m'\u001b[39;49m\u001b[39mbankloan_\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39mstr\u001b[39;49m(nb_vals), compute\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, output_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m../saves\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:63\u001b[0m, in \u001b[0;36mArgTabularExplainer.__init__\u001b[1;34m(self, model, dataset, y, exp_name, compute, output_path)\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcovi_by_arg \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_pickle(path\u001b[39m.\u001b[39mjoin(output_path, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexp_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_covibyarg.df\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m     61\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcovc_by_arg \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_pickle(path\u001b[39m.\u001b[39mjoin(output_path, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexp_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_covcbyarg.df\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m---> 63\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39marguments \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mread_args(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mminimals, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfeature_names)\n",
+      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:161\u001b[0m, in \u001b[0;36mArgTabularExplainer.read_args\u001b[1;34m(self, minimals, feature_names)\u001b[0m\n\u001b[0;32m    159\u001b[0m \u001b[39mfor\u001b[39;00m cl \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(minimals)):\n\u001b[0;32m    160\u001b[0m         \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m minimals[cl]:\n\u001b[1;32m--> 161\u001b[0m             arguments[cl]\u001b[39m.\u001b[39mappend(\u001b[39mtuple\u001b[39m([feature_names[k] \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m f]))\n\u001b[0;32m    162\u001b[0m \u001b[39mreturn\u001b[39;00m arguments\n",
+      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:161\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    159\u001b[0m \u001b[39mfor\u001b[39;00m cl \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(minimals)):\n\u001b[0;32m    160\u001b[0m         \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m minimals[cl]:\n\u001b[1;32m--> 161\u001b[0m             arguments[cl]\u001b[39m.\u001b[39mappend(\u001b[39mtuple\u001b[39m([feature_names[k] \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m f]))\n\u001b[0;32m    162\u001b[0m \u001b[39mreturn\u001b[39;00m arguments\n",
+      "\u001b[1;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
      ]
     }
    ],
@@ -225,23 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2335 2481  args total\n",
-      "bankloan_100\n",
-      "len(R_atk) =  4822396\n",
-      "5 highest degrees: [(frozenset({35}), 2403) (frozenset({30}), 2403)\n",
-      " (frozenset({32, 61}), 2417) (frozenset({51, 36}), 2428)\n",
-      " (frozenset({63}), 2469)]\n",
-      "5 lowest degrees: [(frozenset({3, 28, 55}), 1532) (frozenset({3, 13, 38}), 1535)\n",
-      " (frozenset({2, 10, 52}), 1541) (frozenset({2, 10, 54}), 1545)\n",
-      " (frozenset({1, 10, 41}), 1551)]\n",
-      "edges per node: 2002.656146179402\n"
+      "6018 5689  args total\n",
+      "bankloan_200\n",
+      "edges per node: 4768.123857521141\n"
      ]
     }
    ],
@@ -249,8 +240,27 @@
     "G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
+    "print(sum([len(G.edges(n)) for n in G.nodes()]))\n",
     "#explainer.export_graph('tgf', '../saves')\n",
     "explainer.export_graph('asp', '../saves')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bankloan_100_atk_graph.df', 'bankloan_200_atk_graph.df', 'bankloan_75_atk_graph.df'] ['bankloan_100_R_atk.df', 'bankloan_200_R_atk.df', 'bankloan_500_R_atk.df', 'bankloan_75_R_atk.df']\n",
+      "[4822396, 27910213, 222239181, 2129211]\n"
+     ]
+    }
+   ],
+   "source": [
+    "explainer.af_analysis()"
    ]
   },
   {
