--- a/experiments/exp_lending.ipynb
+++ b/experiments/exp_lending.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
     "\n",
     "train_data = pd.DataFrame(transformed_data, columns=dataset.feature_names)\n",
     "print(train_data.shape)\n",
-    "nb_vals = 100\n",
+    "nb_vals = 800\n",
     "\n",
     "print(dataset.train[0])\n",
     "print(dataset.train[0].reshape(1, -1))\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -102,25 +102,25 @@
      "text": [
       "['loan_amnt', 'home_ownership', 'annual_inc', 'desc', 'inq_last_6mths', 'revol_util', 'last_fico_range_high', 'last_fico_range_low', 'pub_rec_bankruptcies']\n",
       "Generating arguments\n",
-      "900  potential arg checked.\n",
-      "len  1 : 2 ,  1\n",
-      "3600  potential arg checked.\n",
-      "len  2 : 49 ,  61\n",
-      "8400  potential arg checked.\n",
-      "len  3 : 159 ,  197\n",
-      "12600  potential arg checked.\n",
-      "len  4 : 59 ,  18\n",
-      "12600  potential arg checked.\n",
-      "len  5 : 7 ,  0\n",
-      "8400  potential arg checked.\n",
-      "len  6 : 0 ,  0\n",
-      "3600  potential arg checked.\n",
-      "len  7 : 0 ,  0\n",
-      "900  potential arg checked.\n",
+      "len  1 : 0 ,  1\n",
+      "34 potential arg checked ( 0 not minimal)\n",
+      "len  2 : 54 ,  4\n",
+      "469 potential arg checked ( 12 not minimal)\n",
+      "len  3 : 212 ,  200\n",
+      "2800 potential arg checked ( 832 not minimal)\n",
+      "len  4 : 646 ,  998\n",
+      "7835 potential arg checked ( 6621 not minimal)\n",
+      "len  5 : 432 ,  524\n",
+      "8076 potential arg checked ( 21455 not minimal)\n",
+      "len  6 : 39 ,  5\n",
+      "3895 potential arg checked ( 28163 not minimal)\n",
+      "len  7 : 2 ,  0\n",
+      "1015 potential arg checked ( 17774 not minimal)\n",
       "len  8 : 0 ,  0\n",
-      "100  potential arg checked.\n",
+      "110 potential arg checked ( 5585 not minimal)\n",
       "len  9 : 0 ,  0\n",
-      "Saving to  ../saves\\lending_100_minimals.df\n"
+      "0 potential arg checked ( 705 not minimal)\n",
+      "Saving to  ../saves\\lending_800_minimals.df\n"
      ]
     }
    ],
@@ -139,23 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "276 277  args total\n",
-      "lending_100\n",
-      "len(R_atk) =  55972\n",
-      "5 highest degrees: [(frozenset({13, 22}), 262) (frozenset({26, 31, 15}), 267)\n",
-      " (frozenset({32, 25}), 267) (frozenset({32, 22}), 267)\n",
-      " (frozenset({30}), 269)]\n",
-      "5 lowest degrees: [(frozenset({1, 19, 12}), 124) (frozenset({1, 21, 14}), 127)\n",
-      " (frozenset({3, 21, 6, 14}), 128) (frozenset({2, 18, 13}), 131)\n",
-      " (frozenset({1, 18, 11}), 132)]\n",
-      "edges per node: 202.43037974683546\n"
+      "1385 1732  args total\n",
+      "lending_800\n",
+      "edges per node: 960.1937760667308\n"
      ]
     }
    ],
@@ -164,6 +157,24 @@
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
     "explainer.export_graph('asp', '../saves')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lending_1000_atk_graph.df', 'lending_100_atk_graph.df', 'lending_200_atk_graph.df', 'lending_300_atk_graph.df', 'lending_500_atk_graph.df', 'lending_800_atk_graph.df'] ['lending_1000_R_atk.df', 'lending_100_R_atk.df', 'lending_200_R_atk.df', 'lending_300_R_atk.df', 'lending_500_R_atk.df', 'lending_800_R_atk.df']\n",
+      "[1874015, 55972, 268742, 454307, 831357, 1496462]\n"
+     ]
+    }
+   ],
+   "source": [
+    "explainer.af_analysis()"
    ]
   },
   {
