--- a/experiments/exp_adult.ipynb
+++ b/experiments/exp_adult.ipynb
@@ -167,17 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['adult_10000_atk_graph.df', 'adult_1000_atk_graph.df', 'adult_100_atk_graph.df', 'adult_100_extended_atk_graph.df', 'adult_2000_atk_graph.df', 'adult_200_atk_graph.df', 'adult_25_atk_graph.df', 'adult_300_atk_graph.df', 'adult_500_atk_graph.df', 'adult_50_atk_graph.df', 'adult_75_atk_graph.df', 'adult_75_extended_atk_graph.df', 'adult_800_atk_graph.df', 'adult_80_atk_graph.df', 'adult_85_atk_graph.df'] ['adult_10000_R_atk.df', 'adult_1000_R_atk.df', 'adult_100_extended_R_atk.df', 'adult_100_R_atk.df', 'adult_2000_R_atk.df', 'adult_200_R_atk.df', 'adult_250_R_atk.df', 'adult_25_R_atk.df', 'adult_300_R_atk.df', 'adult_500_R_atk.df', 'adult_50_R_atk.df', 'adult_75_extended_R_atk.df', 'adult_75_R_atk.df', 'adult_800_R_atk.df', 'adult_80_R_atk.df', 'adult_85_R_atk.df']\n",
+      "[97982621, 4922529, 3545405, 72953, 12811966, 231503, 85822, 7065, 558447, 1554757, 18918, 559046, 36404, 3387422, 49143, 52020]\n"
+     ]
+    }
+   ],
+   "source": [
+    "explainer.af_analysis()"
+   ]
   },
   {
    "cell_type": "code",
